src/css/_custom.scss
/* These inject tags are used for dynamically creating imports for themelet styles, you can place them where ever you like in this file. */

/* inject:imports */
/* endinject */

/* This file allows you to override default styles in one central location for easier upgrade and maintenance. */

/* Entire Page Styles */
@font-face {
	font-family: 'gotham_boldregular';
	src: url('fonts/Gotham Bold Regular.ttf') format('truetype');
}
@font-face {
	font-family: 'gotham_lightregular';
	src: url('fonts/Gotham Light Regular.otf') format('truetype');
}

html {
	font-family: "gotham_lightregular", sans-serif;
}

body {
	margin: 0;
}

header, footer, main, menu, nav, section {
	display: block;
}

a {
	background-color: transparent;
}

a:active,a:hover {
	outline: 0;
	text-decoration: none;
}

div, nav, ul {
	background-color: rgba(19,30,38,0.1); /*debug*/
}

p {
	background-color: rgba(100,100,100,0.2); /*debug*/
	position: relative;
}

li {
	list-style: none; /*background-color: yellow; /*debug*/ 
}

#wrapper {
	top: 0;
	margin: 0;
	margin-top: -28px;
}

.section1 {
	background-color: rgba(200,100,0,0.2); /*debug*/
	width: 80%;
	margin: auto;

	p {
		display: inline-block; /*debug*/
		width: 15%;
		margin: auto;
		left: auto;
		right: auto;
		padding: 5px;
	}
}


/* End Entire Page Styles */



/* Styles for Header */

#header {
	font-family:"gotham_boldregular"; /* need to add fonts to html */
	z-index: 99;
	padding-top: 25px;
	position: fixed;
	height: 90px;
	left: 0;
	right: 0;
	background-color: rgba(19,30,38,0.85); /* Will be transparent and not transparent upon scroll later */
	
	a {
		color: #fff;
	}

	a:hover {
		color: #dab485;
	}
}

#header .container .region-header {
	width: 60%;
}

#company-branding {
	display: inline-block;
	padding-top: 10px;
}

#header .site-name a {
	color: #fff;
	font-size: 1.333em;
	text-transform: uppercase;
}

#header .block-menu {
	float:right;
	display: inline-block;
	width: auto;
}



@media (min-width: 992px) {
	#header #nav-menu-top {
		display:inline-block;
		padding-top: 10px;
		width: auto;
	}

	#nav-menu-top > ul.menu {
		margin:0;
	}

	#nav-menu-top > ul.menu > li.menu-item--active-trail a {
		color: #dab485;
	}

	#nav-menu-top > ul.menu > li.menu-item--active-trail a:before {
		width: 100%;
	}

	#nav-menu-top > ul.menu > li {
		list-style:none;
		float:left;
		margin: 0 13px;
		padding-top: 0;
		position: relative;
	}

	#nav-menu-top > ul.menu > li a {
		position: relative;
	}

	#nav-menu-top > ul.menu > li a:before {
		background-color: #dab485;
		bottom: 0;
		content: "";
		height: 4px;
		left: 50%;
		margin: 0 auto;
		position: absolute;
		top: auto;
		transform: translate(-50%,-50px);
		transition: width 0.3s ease 0s;
		width: 0;
	}

	#nav-menu-top > ul.menu li.menu-item--expanded { /* need to hide dropdown UL, but display the li. */
		display: none;
	}

	#nav-menu-top > ul.menu li.menu-item--expanded:hover {
		display: block;
	}

	.region-header > nav.block-menu {
		display: inline-block;
		width: auto;
	}

	#login {
		display: inline-block;
	}



}
















/* End Styles for Header */






.jumbotron-picture {
	background-color: transparent;
	background-image: url("images/mountains2.jpg");
	background-repeat: no-repeat;
	background-position: 0px -600px;
	background-size: cover;
	top: 0;
	height: 700px;
/*move sky up out of picture */
	
}
.background-box { /* This creates space for the jumbotron picture to be displayed */
	height: 700px;
	z-index: 0;
	width: 100%;
	background-color: rgba(19,30,38,0.85); /* overlay over image */
}

